# task

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  config.yml
.github/workflows/: build.yml  release.yml
frontend/src/: common_components  common_locales  common_pages
src/: api.rs  lib.rs  service.rs
src/migration/: m20240101_000001_create_table.rs  migrator.rs
task/: Cargo.toml
task/frontend/: .umirc.ts  package.json
task/frontend/patches/: monaco-editor-webpack-plugin+7.1.0.patch
task/frontend/src/: app.tsx  utils.ts
task/frontend/src/components/: card.tsx  editor.tsx  output.tsx  script_card.tsx  task_card.tsx  terminal.tsx
task/frontend/src/locales/: en-US.ts  zh-CN.ts
task/frontend/src/locales/en-US/: pages.ts  tables.ts
task/frontend/src/locales/zh-CN/: pages.ts  tables.ts
task/frontend/src/pages/: index.tsx  script.tsx  task.tsx
task/locales/: en-US.yml  zh-CN.yml
task/src/: api.rs  lib.rs  service.rs
task/src/migration/: m20240101_000001_create_table.rs  m20250301_000001_create_table.rs  migrator.rs  mod.rs
task_api/: CHANGELOG.md  Cargo.toml
task_api/src/: lib.rs
task_api/src/entity/: scripts.rs  tasks.rs
task_api/src/viewer/: mod.rs  scripts.rs  tasks.rs
