[package]
name = "task"
version = "0.4.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

[dependencies]
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "0.2"
actix-web-validator = "6.0"
validator = { version = "0.18", features = ["derive"] }
abi_stable = "0.11"

actix-cloud = { version = "0.4", default-features = false, features = [
    "traceid",
    "i18n",
    "state",
    "response-json",
] }
skynet_api_task = { version = "0.4", path = "../task_api" }
skynet_api = { version = "0.3", features = [
    "plugin-api",
    "request-param",
    "service-skynet",
] }
skynet_macro = "0.3"
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]

actix-cloud = { version = "0.4", default-features = false, features = [
    "response-build",
] }
