[package]
name = "skynet_api_task"
version = "0.7.1"
edition = "2024"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "API for Skynet task plugin."
license = "GPL-3.0"
repository = "https://github.com/ministruth/task"
keywords = ["framework", "api", "ffi", "plugin"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ffi_rpc = "0.6"
semver = { version = "1.0", features = ["serde"] }
enum-as-inner = "0.6"

actix-cloud = { version = "0.4", default-features = false, features = [
    "macros",
    "seaorm",
    "chrono",
] }
skynet_api = { version = "0.6", features = [
    "service-result",
    "request-condition",
    "database",
] }
skynet_macro = "0.3"
